# DissertationResearch

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: README.md
projects/AVoT/: lightning.py  losses.py  modeling.py  train.py
projects/AVoT/layers/: __init__.py  attention.py  conv.py  synthesis.py
projects/configs/: avot_config_v1.yaml  base.py
src/core/: __init__.py  configuration.py  service_register.py
src/core/engine/: __init__.py  pipeline.py  trainer_wrapper.py
src/core/engine/lightning/: module_wrapper.py  trainer_wrapper.py
src/core/schemas/: __init__.py  builder.py  containers.py  enums.py  provider.py  registry.py
src/core/schemasv2/: configuration.py  container.py  provider.py  registry.py  schema.py
src/core/schematic/: __init__.py  container.py  containers.py  enums.py  factory.py  registry.py  schema.py  strategy.py
src/core/services/: base.py
src/core/utils/: __init__.py  configobject.py  io.py  logger.py
src/data/: picker.py  storage.py  transforms.py  utils.py
src/data/datasets/: builtin.py  modelnet10.py
src/data/mappers/: default.py
src/dissertationresearch/config/: configuration.py
src/dissertationresearch/utils/: pylogging.py
src/projects/configs/: base.py
src/research/: cli.py
src/research/config/: configuration.py  schemas.py
src/research/engine/: trainer.py
src/research/utils/: __init__.py  io.py  logger.py
src/structures/: mesh.py  voxel.py  voxels.py
src/utils/: configuration.py  rendering.py  visualization.py
tests/: test_core.py  test_cuda.py  test_io.py
