[project]
name = "dissertationresearch"
version = "0.1.0"
description = ""
authors = [
    {name = "Qwelice",email = "Qwelice@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false
# packages = [{include = "dissertationresearch", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.dependencies]
numpy = { version = "<2" }
torch = { source = "pytorch", version = "2.4.0" }
torchvision = { source = "pytorch", version = "0.19.0" }
torchaudio = { source = "pytorch", version = "2.4.0" }
setuptools = { version = "^75.8.1" }
open3d = { version = "^0.19.0" }
pytorch-lightning = { version = "^2.5.0" }
tensorboard = { version = "^2.19.0" }
pytorch3d = { path = "../External modules/pytorch3d-0.7.8", develop = true }
build = { version = "^1.2"}