[project]
name = "research"
version = "0.1.0"
description = ""
authors = [
    {name = "Qwelice",email = "Qwelice@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "research", from = "src"}]


[tool.poetry.scripts]
dr = "research.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = { version = "^7" }

[tool.poetry.dependencies]
numpy = { version = "<2" }
torch = { source = "pytorch", version = "2.4.0" }
torchvision = { source = "pytorch", version = "0.19.0" }
torchaudio = { source = "pytorch", version = "2.4.0" }
setuptools = { version = "^75.8.1" }
open3d = { version = "^0.19.0" }
pytorch-lightning = { version = "^2.5.0" }
tensorboard = { version = "^2.19.0" }
# pytorch3d = { path = "../External modules/pytorch3d-0.7.8", develop = true }
build = { version = "^1.2"}
typer = { version = "*" }
easydict = { version = "*" }